# asf_mission_data

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pipelines.yaml  pyproject.toml
.github/workflows/: .gitkeep  build-and-push.yaml  build_and_push.yaml  pre-commit.yaml  promote-to-prod.yaml  run-pipeline-prod.yaml  run-pipeline.yaml  run-tests.yaml  test-oidc.yaml  test-pipeline-dev.yaml  test.yaml
asf_mission_data/: Dockerfile  __init__.py  alerting.py  docker-compose.yaml  logging_utils.py  registry.py  requirements.txt  run.py  storage.py  utils.py
asf_mission_data/config/: logging.yaml
asf_mission_data/pipeline/: driver.py  transformations.py
asf_mission_data/pipeline/energy_price_cap_levels_annex_9/: README.md  bronze.py  config.py  dataset_registry.md  gold.py  handler.py  pipeline.py  schemas.py  silver.py  validators.py
asf_mission_data/pipeline/example/: README.md  bronze.py  config.py  config.yaml  functions.py  hamilton_test.py  handler.py  pipeline.py  run_hamilton_test.py  schemas.py  silver.py
asf_mission_data/pipeline/heat_pump_deployment_statistics/: README.md  bronze.py  bronze_silver_core_code.ipynb  config.py  pipeline.py  schemas.py  silver.py  validators.py
docs/: DEVELOPMENT.md  adding-pipelines.md  running-pipelines.md
docs/templates/pipelines/: README.md
infrastructure/: README.md  app.py  cdk.json  core.yaml
infrastructure/config/: dev.py  environments.py  prod.py
infrastructure/stacks/: core_stack.py
infrastructure/stacks/core/: README.md  __init__.py  core_stack.py
infrastructure/stacks/ecs/: __init__.py  ecs_stack.py
scripts/: trigger_pipeline.py
templates/: dataset_registry.txt
tests/: test_dummy.py  test_logging_utils.py  test_storage.py  test_storage_paths.py  test_trigger_pipeline.py
tests/infrastructure/: test_core_stack.py
tests/pipeline/example/: conftest.py  test_bronze.py  test_silver.py
