[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "asf-mission-data"
version = "0.1.0"
description = "Data pipelines for the ASF Policy Dashboard"
authors = [{ name = "Nesta" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2.0",
    "pandera>=0.20.0",
    "pyarrow>=14.0.0",
    "s3fs>=2024.2.0",
    "requests>=2.31.0",
    "pyyaml>=6.0.0",
    "beautifulsoup4>=4.14.3",
    "sf-hamilton>=1.89.0",
    "graphviz>=0.20.0",
    "boto3>=1.42.49",
    "python-calamine>=0.6.2",
]

[project.urls]
repository = "https://github.com/nestauk/asf_mission_data"
issues = "https://github.com/nestauk/asf_mission_data/issues"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.9.0",
    "mypy>=1.8.0",
    "pandas-stubs>=2.0.0",
    "pre-commit>=3.6.0",
    "ipykernel>=7.2.0",
    "jupyterlab>=4.5.4",
    "marimo>=0.19.11",
    "sf-hamilton[lsp,visualization]>=1.89.0",
    "boto3-stubs[cloudformation,lambda,s3]>=1.42.53",
    "types-pyyaml>=6.0.12.20250915",
    "types-requests>=2.32.4.20260107",
    "pytest-mock>=3.15.1",
    "validate-pyproject[all]>=0.25",
]

infrastructure = [
    "aws-cdk-lib>=2.170.0",
    "constructs>=10.3.2,<11.0.0",
    "typeguard==2.13.3",  # pinned: aws-cdk-lib is incompatible with typeguard 4.x
]

[tool.hatch.build.targets.wheel]
packages = ["asf_mission_data"]

[tool.ruff]
line-length = 145
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "W",   # pycodestyle warnings
    "B",   # flake8-bugbear
]
# Relaxed for build phase. Candidates to re-enable once stable:
#   "ANN" - type annotations (useful but noisy during rapid development)
#   "D"   - docstrings (add once pipeline patterns are settled)
#   "N"   - naming conventions
#   "C"   - comprehensions + complexity
#
# Uncomment to ignore specific rules:
# ignore = []

[tool.ruff.lint.isort]
known-first-party = ["asf_mission_data"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "E402"]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "--cov=asf_mission_data --cov-report=term-missing"

[tool.coverage.report]
omit = ["tests/*"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
